OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Pending_Finance_Approval__c.field-meta.xml
<CustomField>
    <fullName>Pending_Finance_Approval__c</fullName>
    <label>Pending Finance Approval</label>
    <type>Date</type>
</CustomField>