OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Pending_Initial_Review__c.field-meta.xml
<CustomField>
    <fullName>Pending_Initial_Review__c</fullName>
    <label>Pending Initial Review</label>
    <type>Date</type>
</CustomField>