OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Pending_Sales_Age__c.field-meta.xml
<CustomField>
    <fullName>Pending_Sales_Age__c</fullName>
    <formula>IF(ISBLANK(Pending_Sales_Completed__c), TODAY() - Pending_Sales_Date__c, Pending_Sales_Completed__c - Pending_Sales_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pending Sales Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>