OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Pending_Sales_Completed__c.field-meta.xml
<CustomField>
    <fullName>Pending_Sales_Completed__c</fullName>
    <label>Pending Sales Completed</label>
    <type>Date</type>
</CustomField>