OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Pending_Sales_Date__c.field-meta.xml
<CustomField>
    <fullName>Pending_Sales_Date__c</fullName>
    <label>Pending Sales Date</label>
    <type>Date</type>
</CustomField>