OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/PLE_Training_Complete__c.field-meta.xml
<CustomField>
    <fullName>PLE_Training_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PLE Training Complete</label>
    <type>Checkbox</type>
</CustomField>