OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Principal_Owner_1_Email__c.field-meta.xml
<CustomField>
    <fullName>Principal_Owner_1_Email__c</fullName>
    <label>Agreement emailed to:</label>
    <type>Email</type>
</CustomField>