OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Principal_Owner_2_Email__c.field-meta.xml
<CustomField>
    <fullName>Principal_Owner_2_Email__c</fullName>
    <label>Principal / Owner (2) Email</label>
    <type>Email</type>
</CustomField>