OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Principal_Owner_2_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Principal_Owner_2_Last_Name__c</fullName>
    <label>Principal / Owner (2) Last Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>