OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Principal_Owner__c.field-meta.xml
<CustomField>
    <fullName>Principal_Owner__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Please input the Salesforce Contact that will be signing the agreement. If there is no existing contact, a new one will need to be created.</inlineHelpText>
    <label>Principal Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>