OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/PRO_Status_Summary__c.field-meta.xml
<CustomField>
    <fullName>PRO_Status_Summary__c</fullName>
    <label>Nest PRO or Eero Web Summary</label>
    <type>TextArea</type>
</CustomField>