OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Program_Setup__c.field-meta.xml
<CustomField>
    <fullName>Program_Setup__c</fullName>
    <label>Program Setup</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Incomplete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>