OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/PV_Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>PV_Contract_Number__c</fullName>
    <label>PV Contract Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>