OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/PV_Password__c.field-meta.xml
<CustomField>
    <fullName>PV_Password__c</fullName>
    <label>PV Password</label>
    <length>50</length>
    <type>Text</type>
</CustomField>