OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/PV_VPNID__c.field-meta.xml
<CustomField>
    <fullName>PV_VPNID__c</fullName>
    <label>PV VPNID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>