OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Recruiter__c.field-meta.xml
<CustomField>
    <fullName>Recruiter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recruiter</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ContractsqCNC</relationshipName>
    <type>Lookup</type>
</CustomField>