OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <formula>Text(Account.Region__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Region</label>
    <type>Text</type>
</CustomField>