OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Regional_COM_Mgr__c.field-meta.xml
<CustomField>
    <fullName>Regional_COM_Mgr__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commercial RSM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ContractsqCNc1</relationshipName>
    <type>Lookup</type>
</CustomField>