OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Resale_Age__c.field-meta.xml
<CustomField>
    <fullName>Resale_Age__c</fullName>
    <formula>IF(ISBLANK(Resale_Completed__c), TODAY() - Pending_Initial_Review__c, Resale_Completed__c - Pending_Initial_Review__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Resale Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>