OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Resale_Base_App__c.field-meta.xml
<CustomField>
    <fullName>Resale_Base_App__c</fullName>
    <label>Resale - Base App</label>
    <length>100</length>
    <type>Text</type>
</CustomField>