OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Resale_Completed__c.field-meta.xml
<CustomField>
    <fullName>Resale_Completed__c</fullName>
    <label>Resale Completed</label>
    <type>Date</type>
</CustomField>