OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Resale_Notes__c.field-meta.xml
<CustomField>
    <fullName>Resale_Notes__c</fullName>
    <label>Resale Notes</label>
    <type>TextArea</type>
</CustomField>