OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Retailer_Type__c.field-meta.xml
<CustomField>
    <fullName>Retailer_Type__c</fullName>
    <label>Retailer Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SI</fullName>
            </value>
            <value>
                <fullName>SO</fullName>
            </value>
            <value>
                <fullName>Combo</fullName>
            </value>
            <value>
                <fullName>Existing Customer App</fullName>
            </value>
            <value>
                <fullName>New customer w/o Chuzo</fullName>
                <label>New customer w/o Chuzo App</label>
            </value>
            <value>
                <fullName>New customer with Chuzo</fullName>
                <label>New customer with Chuzo App</label>
            </value>
            <value>
                <fullName>NFFL</fullName>
                <label>NFFL &amp; FFL</label>
            </value>
            <value>
                <fullName>FFL</fullName>
                <label>FFL Only</label>
            </value>
            <value>
                <fullName>National Agent</fullName>
            </value>
            <value>
                <fullName>National Agent and D2D</fullName>
            </value>
            <value>
                <fullName>National Agent and National Retail</fullName>
            </value>
            <value>
                <fullName>National Agent, D2D and National Retail</fullName>
            </value>
            <value>
                <fullName>D2D</fullName>
            </value>
            <value>
                <fullName>D2D and National Retail</fullName>
            </value>
            <value>
                <fullName>National Retail</fullName>
            </value>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Intercept F2F</fullName>
            </value>
            <value>
                <fullName>Brick &amp; Mortar</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>