OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Roster__c.field-meta.xml
<CustomField>
    <fullName>Roster__c</fullName>
    <label>Roster</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>Pending Dealer</fullName>
            </value>
            <value>
                <fullName>Returned from Dealer</fullName>
            </value>
            <value>
                <fullName>Ready to Send to Charter</fullName>
            </value>
            <value>
                <fullName>Requested to Partner</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>