OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Roster_Age__c.field-meta.xml
<CustomField>
    <fullName>Roster_Age__c</fullName>
    <formula>IF(ISBLANK(Roster_Completed__c), TODAY() -  Strategy_Form_Approved__c  , Roster_Completed__c - Strategy_Form_Approved__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Roster Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>