OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Roster_Completed__c.field-meta.xml
<CustomField>
    <fullName>Roster_Completed__c</fullName>
    <label>Roster Completed</label>
    <type>Date</type>
</CustomField>