OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Sales_Approval__c.field-meta.xml
<CustomField>
    <fullName>Sales_Approval__c</fullName>
    <defaultValue>&quot;Pending&quot;</defaultValue>
    <label>Sales Approval</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Incomplete</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>