OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Sales_Approval_Summary__c.field-meta.xml
<CustomField>
    <fullName>Sales_Approval_Summary__c</fullName>
    <label>Sales Approval Summary</label>
    <type>TextArea</type>
</CustomField>