OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Sales_Buddy_Username__c.field-meta.xml
<CustomField>
    <fullName>Sales_Buddy_Username__c</fullName>
    <label>Sales Buddy Username</label>
    <length>50</length>
    <type>Text</type>
</CustomField>