OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Sales_Compliance_Marketing_Training__c.field-meta.xml
<CustomField>
    <fullName>Sales_Compliance_Marketing_Training__c</fullName>
    <label>Sales Compliance Marketing Training</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Incomplete</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>