OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/SAPCRM_Sales_Code__c.field-meta.xml
<CustomField>
    <fullName>SAPCRM_Sales_Code__c</fullName>
    <label>SAPCRM Sales Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>