OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Sara_Plus_Password__c.field-meta.xml
<CustomField>
    <fullName>Sara_Plus_Password__c</fullName>
    <label>Sara Plus Password</label>
    <length>20</length>
    <type>Text</type>
</CustomField>