OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Shop_ID__c.field-meta.xml
<CustomField>
    <fullName>Shop_ID__c</fullName>
    <label>Shop ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>