OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/SI_Number__c.field-meta.xml
<CustomField>
    <fullName>SI_Number__c</fullName>
    <label>SI Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>