OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/SO_Number__c.field-meta.xml
<CustomField>
    <fullName>SO_Number__c</fullName>
    <label>SO Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>