OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Static_IP_Address__c.field-meta.xml
<CustomField>
    <fullName>Static_IP_Address__c</fullName>
    <label>Static IP Address</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Validated</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>