OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Strategy_Form__c.field-meta.xml
<CustomField>
    <fullName>Strategy_Form__c</fullName>
    <label>Strategy Form/Smart Sheet</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>Sent to Partner</fullName>
            </value>
            <value>
                <fullName>Approved by Partner</fullName>
            </value>
            <value>
                <fullName>Denied by Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>