OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Strategy_Form_Age__c.field-meta.xml
<CustomField>
    <fullName>Strategy_Form_Age__c</fullName>
    <formula>IF(ISBLANK(Strategy_Form_Approved__c), TODAY() - Strategy_Form_Sent__c , Strategy_Form_Approved__c - Strategy_Form_Sent__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Strategy/Submittal Form Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>