OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Strategy_Form_Approved__c.field-meta.xml
<CustomField>
    <fullName>Strategy_Form_Approved__c</fullName>
    <label>Strategy Form Approved</label>
    <type>Date</type>
</CustomField>