OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Strategy_Form_Sent__c.field-meta.xml
<CustomField>
    <fullName>Strategy_Form_Sent__c</fullName>
    <label>Strategy Form Sent</label>
    <type>Date</type>
</CustomField>