OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Submitted_to_Viasat__c.field-meta.xml
<CustomField>
    <fullName>Submitted_to_Viasat__c</fullName>
    <defaultValue>&quot;Not Started&quot;</defaultValue>
    <label>Submitted to Viasat</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>Denied by Viasat</fullName>
            </value>
            <value>
                <fullName>Incomplete</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Requested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>