OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Submitted_to_Viasat_Age__c.field-meta.xml
<CustomField>
    <fullName>Submitted_to_Viasat_Age__c</fullName>
    <formula>IF(ISBLANK(Submitted_to_Viasat_Completed__c), TODAY() - Submitted_to_VS_Requested__c , Submitted_to_Viasat_Completed__c - Submitted_to_VS_Requested__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Submitted to Viasat Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>