OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Submitted_to_Viasat_Completed__c.field-meta.xml
<CustomField>
    <fullName>Submitted_to_Viasat_Completed__c</fullName>
    <label>Submitted to Viasat Completed</label>
    <type>Date</type>
</CustomField>