OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Submitted_to_Viasat_Summary__c.field-meta.xml
<CustomField>
    <fullName>Submitted_to_Viasat_Summary__c</fullName>
    <label>Submitted to Viasat Summary</label>
    <length>100</length>
    <type>Text</type>
</CustomField>