OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Submitted_to_VS_Requested__c.field-meta.xml
<CustomField>
    <fullName>Submitted_to_VS_Requested__c</fullName>
    <label>Submitted to VS Requested</label>
    <type>Date</type>
</CustomField>