OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Temp_Only_Run_Via_New_Flows__c.field-meta.xml
<CustomField>
    <fullName>Temp_Only_Run_Via_New_Flows__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Temp - Only Run Via New Flows</label>
    <type>Checkbox</type>
</CustomField>