OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Temporary_Password__c.field-meta.xml
<CustomField>
    <fullName>Temporary_Password__c</fullName>
    <description>Temporary password for National Retail Sara Plus Login</description>
    <label>Temporary Password</label>
    <length>50</length>
    <type>Text</type>
</CustomField>