OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Terms_Age__c.field-meta.xml
<CustomField>
    <fullName>Terms_Age__c</fullName>
    <formula>IF(ISBLANK(Terms_Completed__c), TODAY() - Pending_Initial_Review__c, Terms_Completed__c - Pending_Initial_Review__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Terms Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>