OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Terms_Base_App__c.field-meta.xml
<CustomField>
    <fullName>Terms_Base_App__c</fullName>
    <label>Terms - Base App</label>
    <length>100</length>
    <type>Text</type>
</CustomField>