OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Terms_Completed__c.field-meta.xml
<CustomField>
    <fullName>Terms_Completed__c</fullName>
    <label>Terms Completed</label>
    <type>Date</type>
</CustomField>