OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Terms_Summary__c.field-meta.xml
<CustomField>
    <fullName>Terms_Summary__c</fullName>
    <label>Terms Summary</label>
    <type>TextArea</type>
</CustomField>