OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <formula>Text(Account.Territory__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Territory</label>
    <type>Text</type>
</CustomField>