OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Tier_1_Review_Age__c.field-meta.xml
<CustomField>
    <fullName>Tier_1_Review_Age__c</fullName>
    <formula>IF(ISBLANK(Tier_1_Review_Completed__c), TODAY() - Pending_Initial_Review__c, Tier_1_Review_Completed__c - Pending_Initial_Review__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tier 1 Review Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>