OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Tier_1_Review_Completed__c.field-meta.xml
<CustomField>
    <fullName>Tier_1_Review_Completed__c</fullName>
    <label>Tier 1 Review Completed</label>
    <type>Date</type>
</CustomField>