OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/TM_Questionnaire__c.field-meta.xml
<CustomField>
    <fullName>TM_Questionnaire__c</fullName>
    <label>TM Questionnaire</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>Incomplete</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>