OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/TM_Questionnaire_Age__c.field-meta.xml
<CustomField>
    <fullName>TM_Questionnaire_Age__c</fullName>
    <formula>IF(ISBLANK(TM_Questionnaire_Completed__c), TODAY() - Pending_Initial_Review__c, TM_Questionnaire_Completed__c  - Pending_Initial_Review__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TM Questionnaire Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>