OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/TM_Questionnaire_Completed__c.field-meta.xml
<CustomField>
    <fullName>TM_Questionnaire_Completed__c</fullName>
    <label>TM Questionnaire Completed</label>
    <type>Date</type>
</CustomField>