OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Toll_Free__c.field-meta.xml
<CustomField>
    <fullName>Toll_Free__c</fullName>
    <label>Toll Free #</label>
    <type>Phone</type>
</CustomField>