OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Training__c.field-meta.xml
<CustomField>
    <fullName>Training__c</fullName>
    <defaultValue>&quot;Incomplete&quot;</defaultValue>
    <inlineHelpText>Training on the New Dealer Application (DOM) is Chuzo Owner Training.

The Program Training for Chuzo is tracked on the Program contract.</inlineHelpText>
    <label>Training</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Incomplete</fullName>
                <default>true</default>
                <label>Incomplete</label>
            </value>
            <value>
                <fullName>Pending Partner Set Up</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
            <value>
                <fullName>Not Started</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>