OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Training_Age__c.field-meta.xml
<CustomField>
    <fullName>Training_Age__c</fullName>
    <formula>IF(ISBLANK(Training_Completed__c), TODAY() - Training_Started__c, Training_Completed__c - Training_Started__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Training Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>