OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Training_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Training_Email_Sent__c</fullName>
    <label>Training Email Sent</label>
    <type>Date</type>
</CustomField>