OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Training_Started__c.field-meta.xml
<CustomField>
    <fullName>Training_Started__c</fullName>
    <label>Training Started</label>
    <type>Date</type>
</CustomField>