OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Training_Summary__c.field-meta.xml
<CustomField>
    <fullName>Training_Summary__c</fullName>
    <label>Training Summary</label>
    <type>TextArea</type>
</CustomField>