OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/UID_Age__c.field-meta.xml
<CustomField>
    <fullName>UID_Age__c</fullName>
    <formula>IF(ISBLANK(UID_Completed__c), TODAY() - UID_Requested__c, UID_Completed__c - UID_Requested__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UID Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>