OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/UID_Completed__c.field-meta.xml
<CustomField>
    <fullName>UID_Completed__c</fullName>
    <label>UID Completed</label>
    <type>Date</type>
</CustomField>