OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/UID_Requested__c.field-meta.xml
<CustomField>
    <fullName>UID_Requested__c</fullName>
    <label>UID Requested</label>
    <type>Date</type>
</CustomField>