OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/UID_Summary__c.field-meta.xml
<CustomField>
    <fullName>UID_Summary__c</fullName>
    <label>UID Summary</label>
    <type>TextArea</type>
</CustomField>