OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Unique_Dealer_URL__c.field-meta.xml
<CustomField>
    <fullName>Unique_Dealer_URL__c</fullName>
    <label>Unique Dealer URL</label>
    <type>Url</type>
</CustomField>