OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Update_Records__c.field-meta.xml
<CustomField>
    <fullName>Update_Records__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used by Admins when needing to force updates to trigger flows to run.</description>
    <label>Update Records</label>
    <type>Checkbox</type>
</CustomField>