OnboardingV2Minimal/force-app/main/default/objects/Contract/fields/Vetting_Notes__c.field-meta.xml
<CustomField>
    <fullName>Vetting_Notes__c</fullName>
    <label>Vetting Notes</label>
    <type>TextArea</type>
</CustomField>